# railboard-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev.docker-compose.yml  flake.nix  ris-station-board-documentation.txt
.github/workflows/: railboard-api.yml  tests.yml
iris-client/: Cargo.toml
iris-client/src/: endpoints.rs  error.rs  helpers.rs  lib.rs
iris-client/src/endpoints/: station_board.rs
iris-client/src/endpoints/station_board/: response.rs  return.rs
iris-client/src/endpoints/station_board/return/: message.rs  stop.rs
iris-client/src/endpoints/station_board/return/message/: lookup.rs
iris-client/tests/: date_parsing.rs  station_board.rs
nix/: package.nix
railboard-api/: Cargo.toml
railboard-api/src/: cache.rs  custom.rs  error.rs  iris.rs  main.rs  ris.rs  types.rs  vendo.rs  zugportal.rs
railboard-api/src/custom/: station_board.rs  station_board_v2.rs
railboard-api/src/iris/: station_board.rs
railboard-api/src/ris/: journey_details.rs  journey_search.rs  station_board.rs  station_information.rs  station_search_by_name.rs
railboard-api/src/vendo/: journey_details.rs  location_search.rs  station_board.rs
railboard-api/src/zugportal/: station_board.rs
ris-client/: Cargo.toml
ris-client/src/: endpoints.rs  error.rs  lib.rs  request.rs
ris-client/src/endpoints/: journey_details.rs  journey_search.rs  station_board.rs  station_information.rs  station_search.rs
ris-client/src/endpoints/journey_details/: response.rs  transformed.rs
ris-client/src/endpoints/journey_search/: response.rs
ris-client/src/endpoints/station_board/: response.rs  transformed.rs
ris-client/src/endpoints/station_information/: response.rs  transformed.rs
ris-client/src/endpoints/station_search/: response.rs
ris-client/tests/: journey_details.rs  journey_search.rs  station_board.rs  station_information.rs  station_search.rs
src/: client.rs  error_handlers.rs  main.rs  server.rs
src/client/: vendo.rs
src/client/vendo/: station_board.rs
src/client/vendo/station_board/: request.rs
src/server/: error.rs  response.rs  types.rs  vendo.rs
src/server/vendo/: station_board.rs
vendo-client/: Cargo.toml
vendo-client/src/: endpoints.rs  error.rs  lib.rs
vendo-client/src/endpoints/: connection_search.rs  journey_details.rs  location_search.rs  station_board.rs
vendo-client/src/endpoints/connection_search/: request.rs
vendo-client/src/endpoints/journey_details/: response.rs  transformed.rs
vendo-client/src/endpoints/location_search/: request.rs  response.rs
vendo-client/src/endpoints/station_board/: response.rs  transformed.rs
vendo-client/tests/: journey_details.rs  location_search.rs  station_board.rs
zugportal-client/: Cargo.toml
zugportal-client/src/: endpoints.rs  error.rs  helpers.rs  lib.rs
zugportal-client/src/endpoints/: station_board.rs
zugportal-client/src/endpoints/station_board/: response.rs  transformed.rs
