[package]
name = "iris-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"

chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"

async-lock = "2.6.0"
thiserror = "1.0.38"

urlencoding = "2.1.2"


[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
