[dependencies]
async-lock = '2.7.0'
chrono-tz = '0.8.3'
futures = '0.3.28'
serde-xml-rs = '0.6.0'
thiserror = '1.0.44'
urlencoding = '2.1.3'
wu-diff = '0.1.2'

[dependencies.chrono]
features = ['serde']
version = '0.4.26'

[dependencies.reqwest]
default-features = false
features = ['rustls-tls']
version = '0.11.18'

[dependencies.serde]
features = ['derive']
version = '1.0.180'

[dependencies.tokio]
features = ['full']
version = '1.37.0'

[dependencies.utoipa]
features = ['chrono']
version = '3.4.3'
[dev-dependencies.tokio]
features = ['full']
version = '1.37.0'

[package]
edition = '2021'
name = 'iris-client'
version = '0.1.0'
