[package]
name = "railboard-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }

vendo-client = { path = "../vendo-client" }
iris-client = { path = "../iris-client" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }

async-lock = "2.6.0"
thiserror = "1.0.38"
chrono-tz = "0.8.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1.61"

# Caching
redis = { version = "0.22.2", features = [
    "tokio-comp",
    "json",
    "connection-manager",
] }
dotenvy = "0.15.6"
erased-serde = "0.3.24"
futures = "0.3.25"
