[package]
name = "railboard-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }

vendo-client = { path = "../vendo-client" }
iris-client = { path = "../iris-client" }
ris-client = { path = "../ris-client" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"

chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"

async-lock = "2.7.0"
thiserror = "1.0.38"

futures = "0.3.27"
utoipa = { version = "3.0.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1.65"

dotenvy = "0.15.6"

# Caching
redis = { version = "0.22.3", features = [
    "tokio-comp",
    "json",
    "connection-manager",
] }

erased-serde = "0.3.25"
