[dependencies]
async-lock = '2.7.0'
async-trait = '0.1.72'
axum = '0.6.19'
chrono-tz = '0.8.3'
dotenvy = '0.15.7'
erased-serde = '0.3.28'
futures = '0.3.28'
serde_json = '1.0.104'
thiserror = '1.0.44'
tracing = '0.1.37'

[dependencies.chrono]
features = ['serde']
version = '0.4.26'

[dependencies.iris-client]
path = '../iris-client'

[dependencies.redis]
features = [
    'tokio-comp',
    'json',
    'connection-manager',
]
version = '0.32.0'

[dependencies.reqwest]
default-features = false
features = [
    'json',
    'rustls-tls',
]
version = '0.11.18'

[dependencies.ris-client]
path = '../ris-client'

[dependencies.serde]
features = ['derive']
version = '1.0.180'

[dependencies.tokio]
features = ['full']
version = '1.29.1'

[dependencies.tracing-subscriber]
features = ['env-filter']
version = '0.3.17'

[dependencies.utoipa]
features = [
    'axum_extras',
    'chrono',
]
version = '3.4.3'

[dependencies.utoipa-swagger-ui]
features = ['axum']
version = '3.1.4'

[dependencies.vendo-client]
path = '../vendo-client'

[package]
edition = '2021'
name = 'railboard-api'
publish = false
version = '0.1.0'
