[package]
name = "vendo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.1"

async-lock = "2.7.0"
thiserror = "1.0.38"

utoipa = { version = "3.0.3", features = ["chrono"] }

urlencoding = "2.1.2"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
